3822B1PE2/9_gelu_ocl/chernova_natalia/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp:27:16: error: ‘output’ was not declared in this scope
   27 |         return output;
      |                ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp: In lambda function:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp:42:35: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   42 |         que = clCreateCommandQueue(cont, device_id, 0, NULL);
      |               ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/chernova_natalia/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
